@@ -1,3 +1,9 @@
+2002-10-24  Havoc Pennington  <hp@redhat.com>
+
+	* src/theme.c (meta_frame_layout_calc_geometry): if only one
+	right-corner button, use right_right_background not
+	right_left_background
+
 2002-10-24  Havoc Pennington  <hp@pobox.com>
 
 	* src/window.c (meta_window_get_icon_geometry): make public
